# google-test-with-cmake

./: .gitmodules  CMakeLists.txt  README.md
include/: hoge.h
lib/: hoge.cc
src/: main.cc
test/: test-main.cc
